# scraping_hacking_lab

scrape_hack_lab/: pyproject.toml
scrape_hack_lab/chapter_005/: bs4_what_day.py  what_day_today.csv
scrape_hack_lab/tests/: test_scrape_hack_lab.py
